--- a/less/projects.less
+++ b/less/projects.less
@@ -24,6 +24,7 @@
     width: max-content;
     border-bottom: 2px solid aliceblue;
     padding-bottom: 10px;
+    text-align: center;
   }
   h3 {
     font-size: 1.8rem;
